force-app/main/default/objects/amazonconnect__Amazon_Connect__c/fields/amazonconnect__disableCaseContactCCA__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__disableCaseContactCCA__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Choose to enable or disable the AC_AssociateCaseContactCCA trigger, which associates Cases and Contacts with a Contact Channel Analytics Record.</description>
    <inlineHelpText>Choose to enable or disable the AC_AssociateCaseContactCCA trigger, which associates Cases and Contacts with a Contact Channel Analytics Record.</inlineHelpText>
    <label>Disable the Case Contact CCA Trigger</label>
    <type>Checkbox</type>
</CustomField>