force-app/main/default/objects/amazonconnect__Amazon_Connect__c/fields/amazonconnect__disableCCACase__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__disableCCACase__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Choose to enable or disable the AC_AssociateCCACase trigger, which associates a Case with a Contact Channel Analytics record.</description>
    <inlineHelpText>Choose to enable or disable the AC_AssociateCCACase trigger, which associates a Case with a Contact Channel Analytics record.</inlineHelpText>
    <label>Disable the CCA Case Trigger</label>
    <type>Checkbox</type>
</CustomField>