force-app/main/default/objects/amazonconnect__Amazon_Connect__c/fields/amazonconnect__disableTaskTrigger__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__disableTaskTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Choose to enable or disable the AC_TaskTrigger</description>
    <inlineHelpText>This trigger creates a ContactChannel record for any inserted/updated task that with a `CallObject` field that does not currently have a ContactChannel record created before.</inlineHelpText>
    <label>Disable the Task Trigger</label>
    <type>Checkbox</type>
</CustomField>