force-app/main/default/objects/amazonconnect__Amazon_Connect__c/fields/amazonconnect__disableVoiceIdTrigger__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__disableVoiceIdTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Choose to enable or disable the AC_VoiceIdChannel trigger, which associates Cases and Contacts with a Voice Id Channel Record.</description>
    <inlineHelpText>Choose to enable or disable the AC_VoiceIdChannel trigger, which associates Cases and Contacts with a Voice Id Channel Record</inlineHelpText>
    <label>Disable the Voice Id Channel Trigger</label>
    <type>Checkbox</type>
</CustomField>