force-app/main/default/objects/amazonconnect__Amazon_Connect__c/fields/amazonconnect__url__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__url__c</fullName>
    <description>Top level URL of your Amazon Connect instance.</description>
    <inlineHelpText>Please provide the URL for the domain of your Amazon Connect instance, for example https://yourinstancename.awsapps.com</inlineHelpText>
    <label>Url</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>